--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h2 class="text-center">Works</h2>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/img_work_site.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>株式会社きらめき コーポレートサイト</h3>
@@ -108,7 +108,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/img_work_site.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>株式会社きらめき コーポレートサイト</h3>
@@ -132,7 +132,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/img_work_site.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>株式会社きらめき コーポレートサイト</h3>
@@ -169,7 +169,7 @@
         <footer>
             <!-- コピーライトが入るところです -->
             
-            <small class="text-center abel uppercase">&copy; Taro Kirameki, All Rights Reserved.</small>
+            <small class="text-center abel uppercase">&copy; Eito Toyoda, All Rights Reserved.</small>
         </footer>
     </body>
 </html>
